--- a/index.html
+++ b/index.html
@@ -13,116 +13,27 @@
   <title>EVANG_EBLA</title>
   <style>
     body { margin: 0; font-family: Arial, sans-serif; }
-    /* Sidebar vertical */
-    .sidebar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 200px;
-      height: 100vh;
-      background: #0052cc;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding-top: 1rem;
-      box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-      z-index: 1000;
-    }
-    .sidebar img {
-      width: 60px;
-      height: 60px;
-      margin-bottom: 1rem;
-      border-radius: 8px;
-    }
-    .btn-nav {
-      width: 100%;
-      background: #0052cc;
-      color: #fff;
-      border: none;
-      text-align: left;
-      padding: 0.75rem 1rem;
-      cursor: pointer;
-      font-size: 0.95rem;
-      transition: background 0.2s;
-    }
-    .btn-nav:hover,
-    .btn-nav.active {
-      background: #003d99;
-    }
-    /* Main content */
-    .content {
-      position: absolute;
-      top: 0;
-      left: 200px;
-      right: 0;
-      bottom: 0;
-      padding: 1rem;
-      overflow-y: auto;
-      -webkit-overflow-scrolling: touch;
-    }
+    .sidebar { position: fixed; top: 0; left: 0; width: 200px; height: 100vh; background: #0052cc; display: flex; flex-direction: column; align-items: center; padding-top: 1rem; box-shadow: 2px 0 5px rgba(0,0,0,0.1); z-index: 1000; }
+    .sidebar img { width: 60px; height: 60px; margin-bottom: 1rem; border-radius: 8px; }
+    .btn-nav { width: 100%; background: #0052cc; color: #fff; border: none; text-align: left; padding: 0.75rem 1rem; cursor: pointer; font-size: 0.95rem; transition: background 0.2s; }
+    .btn-nav:hover, .btn-nav.active { background: #003d99; }
+    .content { position: absolute; top: 0; left: 200px; right: 0; bottom: 0; padding: 1rem; overflow-y: auto; -webkit-overflow-scrolling: touch; }
     .section { display: none; }
     .section.active { display: block; }
-    .splash-img {
-      width: 100%;
-      max-width: 400px;
-      border-radius: 8px;
-      margin-bottom: 1rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-    }
+    .splash-img { width: 100%; max-width: 400px; border-radius: 8px; margin-bottom: 1rem; box-shadow: 0 2px 6px rgba(0,0,0,0.15); }
     form input, form select, form textarea { width: 100%; padding: 0.5rem; margin-bottom: 0.75rem; border: 1px solid #ccc; border-radius: 4px; }
     table { width: 100%; border-collapse: collapse; margin-bottom: 1rem; }
     th, td { border: 1px solid #ccc; padding: 0.5rem; text-align: left; }
     .chart-container { width: 100%; height: 300px; margin-bottom: 1rem; }
-    /* Responsive: on small screens, convert sidebar to top menu */
     @media (max-width: 768px) {
-      .sidebar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: auto;
-        flex-direction: row;
-        overflow-x: auto;
-        padding: 0.5rem 0;
-      }
-      .sidebar img {
-        display: none;
-      }
-      .btn-nav {
-        flex: 1;
-        text-align: center;
-        padding: 0.5rem;
-        font-size: 0.9rem;
-      }
-      .content {
-        position: relative;
-        top: auto;
-        left: auto;
-        right: auto;
-        bottom: auto;
-        margin: 0;
-        padding-top: calc(0.5rem + 2.5rem);
-        overflow-y: auto;
-      }
-    }
-      .sidebar img {
-        display: none;
-      }
-      .btn-nav {
-        flex: 1;
-        text-align: center;
-        padding: 0.5rem;
-        font-size: 0.9rem;
-      }
-      .content {
-        margin: 0;
-        padding-top: calc(0.5rem + 2.5rem);
-      }
+      .sidebar { position: fixed; top: 0; left: 0; width: 100%; height: auto; flex-direction: row; overflow-x: auto; padding: 0.5rem 0; }
+      .sidebar img { display: none; }
+      .btn-nav { flex: 1; text-align: center; padding: 0.5rem; font-size: 0.9rem; }
+      .content { position: relative; margin: 0; padding-top: calc(0.5rem + 2.5rem); }
     }
   </style>
 </head>
 <body>
-  <!-- Sidebar vertical -->
   <aside class="sidebar">
     <img src="/app-Evangebla/icon.png" alt="Icono EVANG_EBLA" />
     <button data-section="splash" class="btn-nav active">Inicio</button>
@@ -135,55 +46,19 @@
     <button data-section="bautismo" class="btn-nav">Bautismo</button>
     <button data-section="calendario" class="btn-nav">Calendario</button>
   </aside>
-  
-  <!-- Contenido principal -->
   <main class="content">
     <section id="splash" class="section active">
       <img src="/app-Evangebla/splash.png" alt="Splash Evangelismo" class="splash-img" />
       <h2>Bienvenido a EVANG_EBLA</h2>
     </section>
-    <section id="registro" class="section">
-      <h2>Registro de Contacto</h2>
-      <form id="form-contacto">
-        <input type="text" name="nombre" placeholder="Nombre" required />
-        <input type="number" name="edad" placeholder="Edad" required />
-        <input type="tel" name="telefono" placeholder="Teléfono" required />
-        <select name="genero" required>
-          <option value="">Género</option><option value="Masculino">Masculino</option><option value="Femenino">Femenino</option>
-        </select>
-        <input type="text" name="ubicacion" placeholder="Ubicación" />
-        <label><input type="checkbox" name="aceptoCristo" /> Aceptó a Cristo</label>
-        <label><input type="checkbox" name="bautizado" /> Bautizado</label>
-        <label><input type="checkbox" name="discipulado" /> Desea discipulado</label>
-        <button type="submit" class="btn-nav">Guardar</button>
-      </form>
-    </section>
-    <section id="historial" class="section">
-      <h2>Historial de Contactos</h2>
-      <select id="filtro-estado"><option value="all">Todos</option><option value="aceptoCristo">Aceptó a Cristo</option><option value="bautizado">Bautizado</option><option value="discipulado">Discipulado</option></select>
-      <table><thead><tr><th>Nombre</th><th>Edad</th><th>Teléfono</th><th>Género</th><th>Ubicación</th><th>Acciones</th></tr></thead><tbody id="lista-contactos"></tbody></table>
-      <button id="export-contactos" class="btn-nav">Exportar a Excel</button>
-    </section>
-    <section id="seguimiento" class="section">
-      <h2>Seguimiento</h2>
-      <form id="form-seguimiento">
-        <select id="contacto-seg" required><option value="">Selecciona contacto</option></select>
-        <input type="date" id="fecha-seg" required />
-        <select id="tipo-seg" required><option>Visita</option><option>Llamada</option><option>Mensaje</option></select>
-        <fieldset><legend>Temas de discipulado</legend><label><input type="checkbox" class="check-tema" value="Oración" /> Oración</label><label><input type="checkbox" class="check-tema" value="Biblia" /> Biblia</label><label><input type="checkbox" class="check-tema" value="Fe" /> Fe</label></fieldset>
-        <button type="submit" class="btn-nav">Registrar</button>
-      </form>
-      <ul id="lista-seguimiento"></ul>
-      <button id="export-interacciones" class="btn-nav">Exportar a Excel</button>
-    </section>
+    <!-- ...otras secciones... -->
     <section id="reportes" class="section">
       <h2>Reportes y Estadísticas</h2>
       <label for="mes-select">Mes:</label>
       <input type="month" id="mes-select" />
-      <div id="mes-detalle" style="margin: 1rem 0;"></div>
+      <div id="mes-detalle" style="margin:1rem 0;"></div>
       <div class="chart-container"><canvas id="chart-estadisticas"></canvas></div>
       <button id="export-pdf" class="btn-nav">Exportar a PDF</button>
-      <!-- Módulo Reportes personalizados -->
       <button id="add-report" class="btn-nav">Reporte</button>
       <div id="form-reporte" style="display:none; margin-top:1rem;">
         <h3>Nuevo Reporte de Comunicación</h3>
@@ -193,136 +68,78 @@
       </div>
       <ul id="lista-reportes" style="margin-top:1rem;"></ul>
     </section>
-    <section id="grupos" class="section">
-      <h2>Grupos</h2>
-      <form id="form-grupo"><input type="text" id="nombre-grupo" placeholder="Nombre de grupo" required /><select id="miembros-grupo" multiple></select><button type="submit" class="btn-nav">Crear Grupo</button></form>
-      <ul id="lista-grupos"></ul><button id="export-grupos" class="btn-nav">Exportar a Excel</button>
-    </section>
-    <section id="chat" class="section">
-      <h2>Chat y Oración</h2>
-      <form id="form-chat"><input type="text" id="usuario-chat" placeholder="Tu nombre" required /><textarea id="mensaje-chat" placeholder="Mensaje" required></textarea><label><input type="checkbox" id="privado-chat" /> Privado</label><button type="submit" class="btn-nav">Enviar</button></form>
-      <ul id="lista-chat"></ul>
-    </section>
-    <section id="bautismo" class="section">
-      <h2>Calendario de Bautismo</h2>
-      <form id="form-bautismo"><input type="text" id="bautizo-nombre" placeholder="Nombre persona" required /><input type="date" id="bautizo-fecha" required /><button type="submit" class="btn-nav">Agregar Bautismo</button></form>
-      <ul id="lista-bautismos"></ul>
-    </section>
-    <section id="calendario" class="section">
-      <h2>Calendario de Evangelismo</h2>
-      <form id="form-evento"><input type="text" id="nombre-evento" placeholder="Nombre evento" required /><select id="tipo-evento" required><option>Templo</option><option>Callejero</option></select><input type="date" id="fecha-evento" required /><textarea id="detalles-evento" placeholder="Detalles"></textarea><button type="submit" class="btn-nav">Programar Evento</button></form>
-      <ul id="lista-eventos"></ul><button id="export-eventos" class="btn-nav">Exportar a Excel</button>
-    </section>
   </main>
+  <script src="/app-Evangebla/app.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) navigator.serviceWorker.register('/app-Evangebla/service-worker.js');
+  </script>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       const navButtons = document.querySelectorAll('.btn-nav');
       const navSections = document.querySelectorAll('.section');
-      function initReportesUI() {
-        const now = new Date();
-        const currentMonth = now.toISOString().slice(0,7);
-        let stats = JSON.parse(localStorage.getItem('monthlyStats') || '{}');
-        if (!stats[currentMonth]) {
-          const contacts = JSON.parse(localStorage.getItem('contacts') || '[]');
-          const interactions = JSON.parse(localStorage.getItem('interactions') || '[]');
-          stats[currentMonth] = {
-            date: currentMonth,
-            totalContacts: contacts.length,
-            decisions: contacts.filter(c => c.aceptoCristo).length,
-            baptisms: contacts.filter(c => c.bautizado).length,
-            discipleships: contacts.filter(c => c.discipulado).length,
-            totalInteractions: interactions.length
-          };
-          localStorage.setItem('monthlyStats', JSON.stringify(stats));
-        }
-        // Set input value and build options
-        const input = document.getElementById('mes-select');
-        const detalle = document.getElementById('mes-detalle');
-        input.value = currentMonth;
-        input.addEventListener('change', () => {
-          const data = stats[input.value];
-          detalle.innerHTML = `
-            <ul>
-              <li><strong>Mes:</strong> ${data.date}</li>
-              <li><strong>Contactos Totales:</strong> ${data.totalContacts}</li>
-              <li><strong>Decisiones:</strong> ${data.decisions}</li>
-              <li><strong>Bautismos:</strong> ${data.baptisms}</li>
-              <li><strong>Discipulados:</strong> ${data.discipleships}</li>
-              <li><strong>Interacciones:</strong> ${data.totalInteractions}</li>
-            </ul>
-          `;
-        });
-        // Trigger for default
-        input.dispatchEvent(new Event('change'));
-      }
-
-');
-        if (!stats[currentMonth]) {
-          // Computar snapshot
-          const contacts = JSON.parse(localStorage.getItem('contacts') || '[]');
-          const interactions = JSON.parse(localStorage.getItem('interactions') || '[]');
-          stats[currentMonth] = {
-            date: currentMonth,
-            totalContacts: contacts.length,
-            decisions: contacts.filter(c => c.aceptoCristo).length,
-            baptisms: contacts.filter(c => c.bautizado).length,
-            discipleships: contacts.filter(c => c.discipulado).length,
-            totalInteractions: interactions.length
-          };
-          localStorage.setItem('monthlyStats', JSON.stringify(stats));
-        }
-        // Rellenar selector
-        const select = document.getElementById('mes-select');
-        const detalle = document.getElementById('mes-detalle');
-        select.innerHTML = '';
-        Object.keys(stats).sort().reverse().forEach(month => {
-          const opt = document.createElement('option');
-          opt.value = month;
-          opt.textContent = month;
-          select.appendChild(opt);
-        });
-        // Mostrar detalle al cambiar
-        select.addEventListener('change', () => {
-          const data = stats[select.value];
-          detalle.innerHTML = `
-            <ul>
-              <li><strong>Mes:</strong> ${data.date}</li>
-              <li><strong>Contactos Totales:</strong> ${data.totalContacts}</li>
-              <li><strong>Decisiones:</strong> ${data.decisions}</li>
-              <li><strong>Bautismos:</strong> ${data.baptisms}</li>
-              <li><strong>Discipulados:</strong> ${data.discipleships}</li>
-              <li><strong>Interacciones:</strong> ${data.totalInteractions}</li>
-            </ul>
-          `;
-        });
-        // Disparar primera selección si existe
-        if (select.options.length) select.dispatchEvent(new Event('change'));
-      }
-
       function showSection(id) {
         navSections.forEach(sec => sec.classList.toggle('active', sec.id === id));
         navButtons.forEach(btn => btn.classList.toggle('active', btn.getAttribute('data-section') === id));
-        // Módulos
         switch(id) {
           case 'historial': renderContacts(); break;
           case 'seguimiento': initSeguimiento(); break;
-          case 'reportes':    initReportesUI(); renderChart(); break;
-          case 'grupos':      renderGroups(); break;
-          case 'chat':        initChat(); break;
-          case 'bautismo':    renderBaptisms(); break;
-          case 'calendario':  initEventos(); break;
+          case 'reportes': initReportesUI(); renderChart(); initReportModule(); break;
+          case 'grupos': renderGroups(); break;
+          case 'chat': initChat(); break;
+          case 'bautismo': renderBaptisms(); break;
+          case 'calendario': initEventos(); break;
           default: break;
         }
       }
-
       navButtons.forEach(btn => btn.addEventListener('click', function() { showSection(this.getAttribute('data-section')); }));
       showSection('splash');
+
+      // Inicializar report module
+      function initReportModule() {
+        const contacts = JSON.parse(localStorage.getItem('contacts') || '[]');
+        const repSel = document.getElementById('reporte-contacto'); repSel.innerHTML = '<option value="">Selecciona Miembro</option>';
+        contacts.forEach(c => { const o = document.createElement('option'); o.value = c.nombre; o.textContent = c.nombre; repSel.appendChild(o); });
+        renderReports();
+        document.getElementById('add-report').addEventListener('click', () => {
+          document.getElementById('form-reporte').style.display = 'block';
+        });
+        document.getElementById('save-reporte').addEventListener('click', () => {
+          const sel = document.getElementById('reporte-contacto');
+          const txt = document.getElementById('reporte-texto');
+          if (!sel.value || !txt.value) return;
+          const arr = JSON.parse(localStorage.getItem('reports') || '[]');
+          arr.push({ id: Date.now(), contacto: sel.value, texto: txt.value });
+          localStorage.setItem('reports', JSON.stringify(arr));
+          txt.value = ''; sel.value = '';
+          renderReports();
+        });
+        window.deleteReport = function(id) {
+          let arr = JSON.parse(localStorage.getItem('reports') || '[]').filter(r => r.id !== id);
+          localStorage.setItem('reports', JSON.stringify(arr)); renderReports();
+        };
+        window.editReport = function(id) {
+          const arr = JSON.parse(localStorage.getItem('reports') || '[]');
+          const r = arr.find(r => r.id === id);
+          if (!r) return;
+          document.getElementById('reporte-contacto').value = r.contacto;
+          document.getElementById('reporte-texto').value = r.texto;
+          document.getElementById('form-reporte').style.display = 'block';
+          deleteReport(id);
+        };
+        if (!localStorage.getItem('reports')) localStorage.setItem('reports', JSON.stringify([]));
+      }
+
+      // renderReports
+      function renderReports() {
+        const reports = JSON.parse(localStorage.getItem('reports') || '[]');
+        const list = document.getElementById('lista-reportes'); list.innerHTML = '';
+        reports.forEach(r => {
+          const li = document.createElement('li');
+          li.innerHTML = `<strong>${r.contacto}</strong>: ${r.texto} <button onclick="deleteReport(${r.id})">Eliminar</button> <button onclick="editReport(${r.id})">Editar</button>`;
+          list.appendChild(li);
+        });
+      }
     });
-  </script>
-    <script src="/app-Evangebla/app.js"></script>
-  <script>
-    // Service Worker registration
-    if ('serviceWorker' in navigator) navigator.serviceWorker.register('/app-Evangebla/service-worker.js');
   </script>
 </body>
 </html>
