--- a/index.html
+++ b/index.html
@@ -14,7 +14,34 @@
   <style>
     body { margin: 0; font-family: Arial, sans-serif; }
     .sidebar { position: fixed; top: 0; left: 0; width: 200px; height: 100vh; background: #0052cc; display: flex; flex-direction: column; align-items: center; padding-top: 1rem; box-shadow: 2px 0 5px rgba(0,0,0,0.1); z-index: 1000; }
-    .sidebar img { width: 60px; height: 60px; margin-bottom: 1rem; border-radius: 8px; }
+    .sidebar img {
+      width: 60px;
+      height: 60px;
+      margin-bottom: 1rem;
+      border-radius: 8px;
+    }
+    /* Estilos para Formulario de Reporte */
+    #form-reporte {
+      background: #f9f9f9;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      padding: 1rem;
+      margin-top: 1rem;
+    }
+    #form-reporte select,
+    #form-reporte textarea {
+      background: #fff;
+      border: 1px solid #aaa;
+      border-radius: 4px;
+      padding: 0.5rem;
+      width: 100%;
+      box-sizing: border-box;
+      margin-bottom: 0.75rem;
+    }
+    #form-reporte textarea {
+      min-height: 100px;
+      resize: vertical;
+    }
     .btn-nav { width: 100%; background: #0052cc; color: #fff; border: none; text-align: left; padding: 0.75rem 1rem; cursor: pointer; font-size: 0.95rem; transition: background 0.2s; }
     .btn-nav:hover, .btn-nav.active { background: #003d99; }
     .content {
@@ -107,7 +134,14 @@
   <script>
     function toggleReportForm() {
       var f = document.getElementById('form-reporte');
-      f.style.display = (f.style.display === 'block') ? 'none' : 'block';
+      if (f.style.display === 'block') {
+        f.style.display = 'none';
+      } else {
+        // Inicializar opciones antes de mostrar
+        initReportModule();
+        f.style.display = 'block';
+        document.getElementById('reporte-texto').focus();
+      }
     }
   </script>
   <script>
