--- a/index.html
+++ b/index.html
@@ -14,75 +14,28 @@
   <style>
     body { margin: 0; font-family: Arial, sans-serif; }
     .sidebar { position: fixed; top: 0; left: 0; width: 200px; height: 100vh; background: #0052cc; display: flex; flex-direction: column; align-items: center; padding-top: 1rem; box-shadow: 2px 0 5px rgba(0,0,0,0.1); z-index: 1000; }
-    .sidebar img {
-      width: 60px;
-      height: 60px;
-      margin-bottom: 1rem;
-      border-radius: 8px;
-    }
+    .sidebar img { width: 60px; height: 60px; margin-bottom: 1rem; border-radius: 8px; }
     /* Estilos para Formulario de Reporte */
-    #form-reporte {
-      background: #f9f9f9;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      padding: 1rem;
-      margin-top: 1rem;
-    }
-    #form-reporte select,
-    #form-reporte textarea {
-      background: #fff;
-      border: 1px solid #aaa;
-      border-radius: 4px;
-      padding: 0.5rem;
-      width: 100%;
-      box-sizing: border-box;
-      margin-bottom: 0.75rem;
-    }
-    #form-reporte textarea {
-      min-height: 100px;
-      resize: vertical;
-    }
+    #form-reporte { background: #f9f9f9; border: 1px solid #ccc; border-radius: 6px; padding: 1rem; margin-top: 1rem; }
+    #form-reporte select, #form-reporte textarea { background: #fff; border: 1px solid #aaa; border-radius: 4px; padding: 0.5rem; width: 100%; box-sizing: border-box; margin-bottom: 0.75rem; }
+    #form-reporte textarea { min-height: 100px; resize: vertical; }
+    /* Eliminar viñetas de lista de reportes */
+    #lista-reportes { list-style: none; padding: 0; }
+    #lista-reportes li { margin-bottom: 0.5rem; border-bottom: 1px solid #ddd; padding-bottom: 0.5rem; }
+    /* Estilo select reporte con flecha nativa */
+    #form-reporte select { appearance: menulist; -webkit-appearance: menulist; -moz-appearance: menulist; }
+    /* Más altura para la textarea */
+    #form-reporte textarea { min-height: 150px; font-family: inherit; }
     .btn-nav { width: 100%; background: #0052cc; color: #fff; border: none; text-align: left; padding: 0.75rem 1rem; cursor: pointer; font-size: 0.95rem; transition: background 0.2s; }
     .btn-nav:hover, .btn-nav.active { background: #003d99; }
-    .content {
-      /* Contenido con margen a la derecha del sidebar */
-      margin-left: 200px;
-      padding: 1rem;
-    }
-
-    /* Ajuste para pantallas pequeñas */
-    @media (max-width: 768px) {
-      .sidebar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: auto;
-        flex-direction: row;
-        overflow-x: auto;
-        padding: 0.5rem 0;
-      }
-      .sidebar img {
-        display: none;
-      }
-      .btn-nav {
-        flex: 1;
-        text-align: center;
-        padding: 0.5rem;
-        font-size: 0.9rem;
-      }
-      .content {
-        margin-left: 0;
-        padding-top: 60px; /* espacio para menú superior */
-      }
-    }
+    .content { margin-left: 200px; padding: 1rem; }
     .section { display: none; }
     .section.active { display: block; }
     .splash-img { width: 100%; max-width: 400px; border-radius: 8px; margin-bottom: 1rem; box-shadow: 0 2px 6px rgba(0,0,0,0.15); }
     form input, form select, form textarea { width: 100%; padding: 0.5rem; margin-bottom: 0.75rem; border: 1px solid #ccc; border-radius: 4px; }
     table { width: 100%; border-collapse: collapse; margin-bottom: 1rem; }
     th, td { border: 1px solid #ccc; padding: 0.5rem; text-align: left; }
-    .chart-container { width: 100%; height: 300px; margin-bottom: 1rem; }
+    .chart-container { width: 100%; height: 300px; margin-bottom: 1rem; } { width: 100%; height: 300px; margin-bottom: 1rem; }
     @media (max-width: 768px) {
       .sidebar { position: fixed; top: 0; left: 0; width: 100%; height: auto; flex-direction: row; overflow-x: auto; padding: 0.5rem 0; }
       .sidebar img { display: none; }
@@ -214,3 +167,4 @@
   </script>
 </body>
 </html>
+
