--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <title>EVANG_EBLA</title>
   <style>
-    body { margin: 0; font-family: Arial, sans-serif; overflow-x: hidden; }
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
     .sidebar { position: fixed; top: 0; left: 0; width: 200px; height: 100vh; background: #0052cc; display: flex; flex-direction: column; align-items: center; padding-top: 1rem; box-shadow: 2px 0 5px rgba(0,0,0,0.1); z-index: 1000; }
     .sidebar img { width: 60px; height: 60px; margin-bottom: 1rem; border-radius: 8px; }
     /* Estilos para Formulario de Reporte */
@@ -37,7 +40,32 @@
     th, td { border: 1px solid #ccc; padding: 0.5rem; text-align: left; }
     .chart-container { width: 100%; height: 300px; margin-bottom: 1rem; } { width: 100%; height: 300px; margin-bottom: 1rem; }
     @media (max-width: 768px) {
-      .sidebar { position: fixed; top: 0; left: 0; width: 100%; height: auto; flex-direction: row; overflow-x: hidden; padding: 0.5rem 0; }
+      .sidebar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: auto;
+        flex-direction: row;
+        overflow-x: auto;
+        padding: 0.5rem 0;
+        white-space: nowrap;
+      }
+      .sidebar img {
+        display: none;
+      }
+      .btn-nav {
+        flex: none;
+        display: inline-block;
+        text-align: center;
+        padding: 0.5rem;
+        font-size: 0.9rem;
+      }
+      .content {
+        margin-left: 0;
+        padding-top: calc(0.5rem + 2.5rem);
+      }
+    }
       .sidebar img { display: none; }
       .btn-nav { flex: 1; text-align: center; padding: 0.5rem; font-size: 0.9rem; }
       .content { margin-left: 0; padding-top: calc(0.5rem + 2.5rem); }
